Fix input not showing bug

--- a/Src/IAT/Static/style/survey.scss
+++ b/Src/IAT/Static/style/survey.scss
@@ -155,8 +155,9 @@ input[type=tel]:focus,
 input[type=tel]:hover {
     outline: none;
     -webkit-appearance: none;
-    border-bottom: 2ppx;
+    border-width: 2px;
     border-image: linear-gradient(to right, #5EB2F2 , #FF8758);
+    border-image-slice: 1;
     color: #404040;
 }
 
@@ -179,8 +180,9 @@ input[type=text]:focus,
 input[type=text]:hover {
     outline: none;
     -webkit-appearance: none;
-    border-bottom: 2px;
+    border-width: 2px;
     border-image: linear-gradient(to right, #5EB2F2 , #FF8758);
+    border-image-slice: 1;
     color: #ffffff;
 }
 
@@ -211,8 +213,9 @@ select:hover {
 
 select:active {
     color: #404040;
-    border-bottom: 2px;
+    border-width: 2px;
     border-image: linear-gradient(to right, #5EB2F2 , #FF8758);
+    border-image-slice: 1;
     outline: none;
     -webkit-appearance: none;
 }
